--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -3,3 +3,9 @@ topbar.genres=Genres
 topbar.recent=Recent
 topbar.popular=Popular
 topbar.authors=Authors
+footer.signin=Sign in
+footer.documents=Documents
+footer.about=About
+footer.faq=Faq
+footer.contacts=Contacts
+footer.lang=Select language
