--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -3,3 +3,9 @@ topbar.genres=Жанры
 topbar.recent=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
+footer.signin=Войти
+footer.documents=Документы
+footer.about=О компании
+footer.faq=Помощь
+footer.contacts=Контакты
+footer.lang=Выбор языка
